//Lab9/Exercise 1 and 2
Added Exercise 1 and 2 and some more libraries as well as one more function outside the main function hoping this won't affect the code performance

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "ostream": "cpp",
         "ios": "cpp",
         "iomanip": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
