--- a/OOP/Lab 5/Lecture notes/Exercise 1/Exercise 1.vcxproj.filters
+++ b/OOP/Lab 5/Lecture notes/Exercise 1/Exercise 1.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClCompile Include="types_of_initialization.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="constructors.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
