--- a/OOP/Lab 6/Exercise 1/Exercise 1/Exercise 1.vcxproj
+++ b/OOP/Lab 6/Exercise 1/Exercise 1/Exercise 1.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{5479fda2-ecc3-4eb7-8261-854dcf9b16ec}</ProjectGuid>
+    <ProjectGuid>{6367f711-aa2f-4535-9a68-757acccf7556}</ProjectGuid>
     <RootNamespace>Exercise1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -130,7 +130,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="point.h" />
+    <ClInclude Include="Point.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
