--- a/OOP/Lab 6/Exercise 1/Exercise 1/Exercise 1.vcxproj.filters
+++ b/OOP/Lab 6/Exercise 1/Exercise 1/Exercise 1.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="point.h">
+    <ClInclude Include="Point.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
