--- a/OOP/Lab 6/Exercise 2/Exercise 2/Exercise 2.vcxproj
+++ b/OOP/Lab 6/Exercise 2/Exercise 2/Exercise 2.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7761f001-09cf-4ea4-9a6e-955a0be287a3}</ProjectGuid>
+    <ProjectGuid>{28bb3867-3a9d-46fe-a9fd-2b2abecc58d2}</ProjectGuid>
     <RootNamespace>Exercise2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -131,7 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Circle.h" />
-    <ClInclude Include="point.h" />
+    <ClInclude Include="Point.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
