--- a/OOP/Lab 6/Exercise 2/Exercise 2/Exercise 2.vcxproj.filters
+++ b/OOP/Lab 6/Exercise 2/Exercise 2/Exercise 2.vcxproj.filters
@@ -20,10 +20,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="point.h">
+    <ClInclude Include="Circle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Circle.h">
+    <ClInclude Include="Point.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
